@@ -46,6 +46,8 @@
 
 * Added Context::names() method.
 
+* EditorWidget._updateFromContext() is now passed a set containing the names of items changed since the last call to _updateFromContext().
+
 0.36.0
 ------
 * Improved bindings by removing macros and replacing them with proper wrapper classes.
